--- a/Templates/index.html
+++ b/Templates/index.html
@@ -53,21 +53,21 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="./img/logo/OIP.jpg" class="d-block w-100" alt="Imagem 1">
+            <img src="./img/logo/carrossel-1.jpg" class="d-block w-100" alt="Imagem 1">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Produto 1</h5>
                 <p>Descrição do produto 1</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="./img/logo/OIP.jpg" class="d-block w-100" alt="Imagem 2">
+            <img src="./img/logo/carrossel-2.jpg" class="d-block w-100" alt="Imagem 2">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Produto 2</h5>
                 <p>Descrição do produto 2</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="./img/logo/OIP.jpg" class="d-block w-100" alt="Imagem 3">
+            <img src="./img/logo/carrossel-1.jpg" class="d-block w-100" alt="Imagem 3">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Produto 3</h5>
                 <p>Descrição do produto 3</p>
