--- a/Templates/index.html
+++ b/Templates/index.html
@@ -70,6 +70,10 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
+
+    <div class="carousel-caption-custom">
+        <h1>MONTE SUA SETUP COM ESTILO!</h1>
+    </div>
 </div>
 
         <!-- Section-->
@@ -85,7 +89,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Mesa para Escritório Diretor Estilo Industrial 150cm Kuadra</h5>
+                                    <h5 class="fw-bolder">Mesa Kuadra 150cm</h5>
                                     <!-- Product price-->
                                     R$430,00
                                 </div>
@@ -104,7 +108,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Mouse pad de carregamento sem fio Firelison 2 em 1</h5>
+                                    <h5 class="fw-bolder">Mouse Pad Firelison 2 em 1 </h5>
                                     <!-- Product price-->
                                     R$411,78
                                 </div>
@@ -118,12 +122,12 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="./img/produtos/17/monitor-3.jpg" alt="Monitor MSI Pro MP241CAW 24" FHD 75Hz Curvo VA Branco<" />
+                            <img class="card-img-top" src="./img/produtos/17/monitor-3.jpg" alt="Monitor MSI Pro MP241CAW 24 FHD 75Hz Curvo VA Branco" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Monitor MSI Pro MP241CAW 24" FHD 75Hz Curvo VA Branco</h5>
+                                    <h5 class="fw-bolder">Monitor MSI Pro MP241CAW 24</h5>
                                     <!-- Product price-->
                                     R$ 2.764,00
                                 </div>
@@ -142,7 +146,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Suporte Articulado Com Pistao a Gas Para Monitor Zinnia Nimbo 100, 17 Pol. a 27 Pol., Branco, ZNO-ZNNBO100-WH01</h5>
+                                    <h5 class="fw-bolder">Suporte Articulado Zinnia Nimbo 100</h5>
                                     <!-- Product price-->
                                     R$129,99
                                 </div>
@@ -161,7 +165,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder"> Base Suporte Ergonômico Para Notebook Tablet Dobrável top - Home Goods</h5>
+                                    <h5 class="fw-bolder">Base Ergonômica Home Goods</h5>
                                     <!-- Product price-->
                                     R$50,15
                                 </div>
@@ -180,7 +184,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Barra de LED para Monitor Pcyes PLMLCB01, 447x85mm, Regulagem Touch, USB, Preto - 111552</h5>
+                                    <h5 class="fw-bolder">Barra de LED Pcyes</h5>
                                     <!-- Product price-->
                                     R$169,90
                                 </div>
@@ -199,7 +203,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder"> Web cam aicoco 2k Web Cam Com Microfone Ai Auto Ac610</h5>
+                                    <h5 class="fw-bolder">Webcam Aicoco 2K</h5>
                                     <!-- Product price-->
                                     R$649,00
                                 </div>
@@ -218,7 +222,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">TECLADO EPOMAKER RT100</h5>
+                                    <h5 class="fw-bolder">Teclado EPOMAKER RT100</h5>
                                     <!-- Product price-->
                                     R$615,80
                                 </div>
@@ -237,7 +241,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Mouse Gamer Sem Fio Logitech G PRO X SUPERLIGHT 2 com LIGHTSPEED e Bateria Recarregável</h5>
+                                    <h5 class="fw-bolder">Mouse Logitech G PRO X SUPERLIGHT 2</h5>
                                     <!-- Product price-->
                                     R$941,91
                                 </div>
@@ -256,7 +260,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Headtset Gamer Redragon Zeus Pro, Surround 7.1, Cabo USB-C Removível, Wireless, c/Microfone, Preto - H510-PRO</h5>
+                                    <h5 class="fw-bolder">Headset Redragon Zeus Pro</h5>
                                     <!-- Product price-->
                                     R$430,00
                                 </div>
@@ -275,7 +279,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder"> Caixa de som Gamer G2000 Bluetooth 16W RMS EDIFIER - Branco</h5>
+                                    <h5 class="fw-bolder">Caixa de Som EDIFIER G2000</h5>
                                     <!-- Product price-->
                                     R$499,00
                                 </div>
@@ -294,7 +298,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Suporte de pulso ergonômico para teclado em formato de nuvem </h5>
+                                    <h5 class="fw-bolder">Suporte de Pulso Nuvem</h5>
                                     <!-- Product price-->
                                     R$313,00
                                 </div>
@@ -313,7 +317,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Eilik Robô - Robô Inteligente</h5>
+                                    <h5 class="fw-bolder">Eilik Robô</h5>
                                     <!-- Product price-->
                                     R$ 1.599,00
                                 </div>
@@ -332,7 +336,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Relógio Digital 3D LED De Parede e Mesa Design Moderno Luz Noturna Decoração</h5>
+                                    <h5 class="fw-bolder">Relógio Digital 3D LED</h5>
                                     <!-- Product price-->
                                     R$40.00
                                 </div>
@@ -351,7 +355,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder"> Umidificador em forma de nuvem com suporte dourado</h5>
+                                    <h5 class="fw-bolder">Umidificador Nuvem</h5>
                                     <!-- Product price-->
                                     R$285,00
                                 </div>
@@ -370,7 +374,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder"> Cadeira Gamer Flexform Delta White N Blue</h5>
+                                    <h5 class="fw-bolder">Cadeira Gamer Flexform Delta</h5>
                                     <!-- Product price-->
                                     R$1.619,10
                                 </div>
