--- a/Templates/css/styles.css
+++ b/Templates/css/styles.css
@@ -3840,8 +3840,8 @@ textarea.form-control-lg {
   font-weight: bold;
   margin: 0;
   /* background: rgba(0, 0, 0, 0.6); /* Fundo escuro para legibilidade */
-  padding: 10px 20px;
-  border-radius: 10px; */
+  /* padding: 10px 20px;
+  border-radius: 10px;  */
 }
 
 
