--- a/Templates/index.html
+++ b/Templates/index.html
@@ -56,10 +56,10 @@
             <img src="./img/logo/carrossel-5.jpg" class="d-block w-100" alt="Imagem 1">
         </div>
         <div class="carousel-item">
-            <img src="./img/logo/carrossel-4.webp" class="d-block w-100" alt="Imagem 2">
+            <img src="./img/logo/carrossel-9.webp" class="d-block w-100" alt="Imagem 2">
         </div>
         <div class="carousel-item">
-            <img src="./img/logo/ccarossel-3.jpg" class="d-block w-100" alt="Imagem 3">
+            <img src="./img/logo/carrossel-6.jpg" class="d-block w-100" alt="Imagem 3">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
