--- a/Templates/index.html
+++ b/Templates/index.html
@@ -56,7 +56,7 @@
             <img src="./img/logo/carrossel-5.jpg" class="d-block w-100" alt="Imagem 1">
         </div>
         <div class="carousel-item">
-            <img src="./img/logo/carrossel-9.webp" class="d-block w-100" alt="Imagem 2">
+            <img src="./img/logo/carrossel-10.jpg" class="d-block w-100" alt="Imagem 2">
         </div>
         <div class="carousel-item">
             <img src="./img/logo/carrossel-6.jpg" class="d-block w-100" alt="Imagem 3">
