término das informações dos cards

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -121,6 +121,7 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="./img/produtos/17/monitor-3.jpg" alt="Monitor MSI Pro MP241CAW 24 FHD 75Hz Curvo VA Branco" />
                             <!-- Product details-->
@@ -128,8 +129,9 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Monitor MSI Pro MP241CAW 24</h5>
+                                    <div class="text-muted text-decoration-line-through">R$ 2.764,00</div>
                                     <!-- Product price-->
-                                    R$ 2.764,00
+                                    <div class="fw-bold text-success">R$ 2.564,00</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -197,6 +199,7 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="./img/produtos/8/web-cam-1.jpg" alt="Web cam aicoco 2k Web Cam Com Microfone Ai Auto Ac610" />
                             <!-- Product details-->
@@ -204,8 +207,9 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Webcam Aicoco 2K</h5>
+                                    <div class="text-muted text-decoration-line-through">R$ 649,00</div>
                                     <!-- Product price-->
-                                    R$649,00
+                                    <div class="fw-bold text-success">R$ 584,10</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -216,6 +220,7 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="./img/produtos/1/teclado-mecanico-3.jpg" alt="TECLADO EPOMAKER RT100" />
                             <!-- Product details-->
@@ -223,10 +228,11 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Teclado EPOMAKER RT100</h5>
+                                    <div class="text-muted text-decoration-line-through">R$649,00</div>
                                     <!-- Product price-->
-                                    R$615,80
+                                    <div class="fw-bold text-success">R$554,22</div>
                                 </div>
-                            </div>
+                            </div>   
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver opções</a></div>
@@ -235,6 +241,7 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="./img/produtos/2/mouse-4.png" alt="Mouse Gamer Sem Fio Logitech G PRO X SUPERLIGHT 2 com LIGHTSPEED e Bateria Recarregável" />
                             <!-- Product details-->
@@ -242,10 +249,11 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Mouse Logitech G PRO X SUPERLIGHT 2</h5>
+                                    <div class="text-muted text-decoration-line-through">R$941,91</div>
                                     <!-- Product price-->
-                                    R$941,91
+                                    <div class="fw-bold text-success">R$847,71</div>
                                 </div>
-                            </div>
+                            </div>  
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver opções</a></div>
@@ -273,6 +281,7 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="./img/produtos/16/caixa-de-som-1.jpg" alt="Caixa de som Gamer G2000 Bluetooth 16W RMS EDIFIER - Branco" />
                             <!-- Product details-->
@@ -280,10 +289,11 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Caixa de Som EDIFIER G2000</h5>
+                                    <div class="text-muted text-decoration-line-through">R$499,00</div>
                                     <!-- Product price-->
-                                    R$499,00
+                                    <div class="fw-bold text-success">R$449,10</div>
                                 </div>
-                            </div>
+                            </div>  
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver opções</a></div>
@@ -311,6 +321,7 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="./img/produtos/14/eilik-1.jpg" alt="ilik Robô - Robô Inteligente" />
                             <!-- Product details-->
@@ -318,10 +329,11 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Eilik Robô</h5>
+                                    <div class="text-muted text-decoration-line-through">R$1.599,00</div>
                                     <!-- Product price-->
-                                    R$ 1.599,00
+                                    <div class="fw-bold text-success">R$ 1.439,10</div>
                                 </div>
-                            </div>
+                            </div>  
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver opções</a></div>
@@ -368,6 +380,7 @@
                     </div>                    
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="./img/produtos/4/cadeira-1.webp" alt="Cadeira Gamer Flexform Delta White N Blue" />
                             <!-- Product details-->
@@ -375,10 +388,11 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Cadeira Gamer Flexform Delta</h5>
+                                    <div class="text-muted text-decoration-line-through">R$1.619,10</div>
                                     <!-- Product price-->
-                                    R$1.619,10
+                                    <div class="fw-bold text-success">R$1.457,19</div>
                                 </div>
-                            </div>
+                            </div>  
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver opções</a></div>
