--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -59,6 +59,75 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/1-2/mesa-1.webp"
+                                alt="Mesa Para Computador Gamer Rubi, Branco 156,5 cm" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Mesa Para Computador Gamer Rubi 156,5 cm</h5>
+                                    <!-- Product price-->
+                                    R$420,00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/1-3/mesa-1.jpeg"
+                                alt="Mesa Gamer e Escritório XT Racer Space One" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Mesa Gamer e Escritório XT Racer Space One</h5>
+                                    <div class="text-muted text-decoration-line-through"> R$629,98</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 566,98</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/1-4/mesa-1.jpeg"
+                                alt="Escrivaninha Em L 1 Gaveta Max Zanzini Madeirado/Branco" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Escrivaninha Em L 1 Gaveta Max Zanzini Madeirado/Branco</h5>
+                                    <div class="text-muted text-decoration-line-through"> R$349,00</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$331,55</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/5/mousepaad-1-1.jpeg"
                                 alt="Mouse pad de carregamento sem fio Firelison 2 em 1" />
                             <!-- Product details-->
